# AutomataForge

./: .gitignore  CMakeLists.txt  README.md  creature.md  todo.txt
include/: diffusionLayer.h  layer.h  world.h
include/engine/: Engine.h  QuadRenderer.h  ShaderManager.h  Texture.h  TextureManager.h  shader.h  window.h
include/world/: AutomataLayer.h  ReactionDiffusionLayer.h  diffusionLayer.h  layer.h  world.h
lib/: .gitignore  CMakeLists.txt
shaders/: diffusion_compute.glsl  diffusion_coupled_game_of_life_compute.glsl  game_of_life_compute.glsl  game_of_life_fragment.glsl  game_of_life_vertex.glsl  heatmap_quad_fragment.glsl  passthrough_quad_fragment.glsl
shaders/reaction_diffusion/: compute.glsl  quad_fragment.glsl
src/: main.cpp
src/engine/: Engine.cpp  QuadRenderer.cpp  ShaderManager.cpp  Texture.cpp  TextureManager.cpp  shader.cpp  window.cpp
src/world/: AutomataLayer.cpp  ReactionDiffusionLayer.cpp  diffusionLayer.cpp  diffusionLayer.cu  world.cpp
